feat(auth): implement account activation flow with email verification and token expiry handling